// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: block > { let x = 1; return x; } 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?1",
      "0 <= ω",
    ],
    "term": "{
	let x
	: Num
	= 1;
	return x;
	}",
    "type": "Num",
  },
}
`;

exports[`inference: block > { let x = 1; return x; } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "type": "assign",
      },
      {
        "computed": "Zero",
        "expected": "Many",
        "type": "usage",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "return": {
        "type": "Var",
        "variable": {
          "index": 0,
          "type": "Bound",
        },
      },
      "statements": [
        {
          "annotation": {
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Num",
            },
          },
          "type": "Let",
          "value": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
          "variable": "x",
        },
      ],
      "type": "Block",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Num",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: block > { return 1; } 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "{
	return 1;
	}",
    "type": "Num",
  },
}
`;

exports[`inference: block > { return 1; } 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {},
    "term": {
      "return": {
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "statements": [],
      "type": "Block",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Num",
      },
    },
    "typedTerms": {},
  },
}
`;
